--- a/examples/cuda/qtl/doc/main.tex
+++ b/examples/cuda/qtl/doc/main.tex
@@ -21,7 +21,7 @@ Thought:  Free Page Matrix Manager
 
 Initial thought process:
 \begin{itemize}
-\item Host is performs random number generation, and uploads them to device.
+\item Host performs random number generation, and uploads them to device.
 \item Host triggers reproduction pipeline. 
 \end{itemize}
 
