Updated to enable -std=c++11

--- a/README
+++ b/README
@@ -24,11 +24,13 @@ DEPENDENCIES
     - TCMalloc & Profiler  [optional] (https://code.google.com/p/gperftools/)
     - GSL [optional]
     - CUDA GPGPU with compute capability 3.0 or greater [optional]
+    - CUDA Toolkit 7.0 or greater [optional]
 
 SUPPORTED SYSTEMS:
 - *NIX
 - Mac OSX has not been fully tested.  Early tests suggest that librt and libpthread are not available/used on Mac OSX. See 'Useful CMake Configuration Options' to see how to turn linking against these libraries off.
 - CUDA GPUs with compute capability 3.0 or greater.  Example CUDA code utilizes __shfl* instructions which are only available after compute capability 3.0.
+- CUDA Toolkit 7.0 is used because it allows for -std=c++11 to be used in host code.
 
 
 COMPILATION
